command style changed for status. The others need to be reorganized as well