@@ -13,23 +13,43 @@ import lombok.extern.slf4j.Slf4j;
 public class ScriptExecuter {
  
 	public List<String> executeScript(String... args) {
-		log.info("EXECUTING:", String.join(" ", args));
+
+		System.out.println("EXECUTING THIS:" + String.join(" ", args));
+		log.info("executing:" + String.join(" ", args));
+		Process p;
 		List<String> cellValues = new ArrayList<>();
 		try {
-			ProcessBuilder builder = new ProcessBuilder(args);
-			builder.redirectErrorStream(true);
+			p = Runtime.getRuntime().exec(args);
+			int resultNum = p.waitFor();
 
-			Process process = builder.start();
-			InputStream is = process.getInputStream();
-			BufferedReader reader = new BufferedReader(new InputStreamReader(is));
+			BufferedReader in = new BufferedReader(
+					new InputStreamReader(p.getInputStream()));
+
+			BufferedReader err = new BufferedReader(
+					new InputStreamReader(p.getErrorStream()));
 
 			String line = null;
-			while ((line = reader.readLine()) != null) {
-				log.trace(line);
-				cellValues.add(line);
+
+			if (resultNum == 0) {
+				while ((line = in.readLine()) != null) {
+					log.debug(line);
+					cellValues.add(line);
+				}
+				// For better seeing the result
+				System.out.println("SUCCESS:" + String.join("\n", cellValues));
+				log.info("COMMAND OUTPUT:" + String.join("\n", cellValues));
+			} else {
+				while ((line = err.readLine()) != null) {
+					log.debug(line);
+					cellValues.add(line);
+				}
+				// for better seeing the errors
+				System.out.println("ERROR:" + String.join("\n", cellValues));
+				log.error("COMMAND OUTPUT:" + String.join("\n", cellValues));
 			}
 
-		} catch (IOException e) {
+
+		} catch (Exception e) {
 			e.printStackTrace();
 		}
 
